# wom-rust

./: index.html  package.json  pnpm-lock.yaml
public/: cursor-ex.kra
src/: App.tsx  Layout.tsx  appInit.ts  constant.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: calculator.rs  config.rs  event.rs  main.rs  my_tray.rs  path_helper.rs  platform.rs  preload.js  runtime.rs  setting.rs
src-tauri/src/config/: cmd.rs  core.rs  default.rs  init.rs  persistence.rs
src-tauri/src/items/: item.rs
src-tauri/src/platform/: mod.rs  windows.rs
src-tauri/src/setting/: cmd.rs  core.rs  default.rs  init.rs  persistence.rs  search.rs
src/app/: env.ts  init.ts  persistence.ts  runtime.ts  womExecuter.ts  womInputer.ts  womItem.ts  womItemTag.ts  womItemType.ts  womPlugin.ts
src/core/: constants.ts  invoker.ts  runtime.ts  womExecuter.ts  womInputer.ts  womItem.ts  womPlugins.ts
src/page/: Default.css  Default.tsx  Error.tsx  Layout.css  Layout.tsx  LayoutOffspring.css  Loading.css  Loading.tsx  Wom.tsx
src/page/navigation/: NavIndex.css  NavIndex.tsx  Navigation.css  Navigation.tsx
src/page/navigation/setting/: ItemFamily.tsx  Setting.css  Setting.tsx
src/page/offspring/: Offspring.tsx
src/page/wom/: Item-active.css  Item-hover.css  Item.css  Item.tsx  ItemAction.tsx  ItemIcon.tsx  Wom.css  Wom.tsx  executer.ts  inputer.ts  runtime.ts  womContext.ts  womReducer.ts
src/pages/: ConfigLoader.tsx  Layout.css  Layout.tsx  Loading.css  Loading.tsx  NotFound.tsx  Offspring.css  Offspring.tsx
src/pages/navigation/: NaviBox.css  NaviBox.tsx  NaviIndex.css  NaviIndex.tsx
src/pages/plugins/: PluginBox.tsx
src/pages/wom/: Wom.css  Wom.tsx  WomReducer.ts  womContext.ts
src/pages/wom/item/: Item-active.css  Item-hover.css  Item.css  Item.tsx  ItemAction.tsx  ItemIcon.tsx
src/router/: context.ts  hooks.ts
src/router/components/: RouterProvider.tsx
